refs #35225 - fix layout issues

--- a/scss/block/aufrufanzeige.scss
+++ b/scss/block/aufrufanzeige.scss
@@ -37,7 +37,7 @@
 .waitingColumn {
     position: absolute;
     left: 40px; 
-    top: 470px; 
+    top: 420px; 
 }
 .aufrufanzeige .wartende_aktuell
 {
